--- a/WebApi/Api.Domain/Api.Domain.csproj
+++ b/WebApi/Api.Domain/Api.Domain.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="NLog" Version="4.7.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.1" />
   </ItemGroup>
 
   <ItemGroup>
