--- a/WebApi/Api.Repository/Api.Repository.csproj
+++ b/WebApi/Api.Repository/Api.Repository.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Api.Common\Api.Common.csproj" />
     <ProjectReference Include="..\Api.Database\Api.Database.csproj" />
   </ItemGroup>
